fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/Capital_Account_Profiles__c.object-meta.xml
<CustomObject>
    <label>Capital Account Profiles</label>
    <nameField>
        <displayFormat>CP-{00000}</displayFormat>
        <label>Capital Account Profiles Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Capital Account Profiles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>