fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/AC1Email__c.field-meta.xml
<CustomField>
    <fullName>AC1Email__c</fullName>
    <formula>Additional_Contact1__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>