fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/AC1Phone__c.field-meta.xml
<CustomField>
    <fullName>AC1Phone__c</fullName>
    <formula>Additional_Contact1__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>