fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/AC2Phone__c.field-meta.xml
<CustomField>
    <fullName>AC2Phone__c</fullName>
    <formula>Additional_Contact2__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>