fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/AC3Department__c.field-meta.xml
<CustomField>
    <fullName>AC3Department__c</fullName>
    <formula>Additional_Contact3__r.Department</formula>
    <label>Department</label>
    <type>Text</type>
</CustomField>