fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/AC3Email__c.field-meta.xml
<CustomField>
    <fullName>AC3Email__c</fullName>
    <formula>Additional_Contact3__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>