fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/AC3Title__c.field-meta.xml
<CustomField>
    <fullName>AC3Title__c</fullName>
    <formula>Additional_Contact3__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title</label>
    <type>Text</type>
</CustomField>