fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/Active_Service_Aggrement__c.field-meta.xml
<CustomField>
    <fullName>Active_Service_Aggrement__c</fullName>
    <label>Active Service Aggrement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>