fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/Additional_Contact1__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Contact1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Capital Account Profiles (Additional Contact1)</relationshipLabel>
    <relationshipName>Capital_Account_Profiles1</relationshipName>
    <type>Lookup</type>
</CustomField>