fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/Additional_Contact3__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Contact3</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Capital Account Profiles (Additional Contact3)</relationshipLabel>
    <relationshipName>Capital_Account_Profiles3</relationshipName>
    <type>Lookup</type>
</CustomField>