fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/Additional_Contact4__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contact4__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Additional Contact4</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Capital Account Profiles (Additional Contact4)</relationshipLabel>
    <relationshipName>Capital_Account_Profiles4</relationshipName>
    <type>Lookup</type>
</CustomField>