fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/ASP_Per_Pump__c.field-meta.xml
<CustomField>
    <fullName>ASP_Per_Pump__c</fullName>
    <label>ASP Per Pump</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>