fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/Catheter_ASP__c.field-meta.xml
<CustomField>
    <fullName>Catheter_ASP__c</fullName>
    <label>Catheter ASP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>