fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Account&apos;s Billing City</description>
    <formula>Account__r.BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account&apos;s Billing City</inlineHelpText>
    <label>City</label>
    <type>Text</type>
</CustomField>