fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/Clinical_Support__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Support__c</fullName>
    <label>Clinical Support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blunck</fullName>
            </value>
            <value>
                <fullName>Collins</fullName>
            </value>
            <value>
                <fullName>Dee</fullName>
            </value>
            <value>
                <fullName>Pitner</fullName>
            </value>
            <value>
                <fullName>VanHorn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>