fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/Confidence_Month_Closure__c.field-meta.xml
<CustomField>
    <fullName>Confidence_Month_Closure__c</fullName>
    <label>Confidence Month Closure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>25%</fullName>
            </value>
            <value>
                <fullName>40%</fullName>
            </value>
            <value>
                <fullName>75%</fullName>
            </value>
            <value>
                <fullName>90%</fullName>
            </value>
            <value>
                <fullName>100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>