fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/Conventional_or_FOS__c.field-meta.xml
<CustomField>
    <fullName>Conventional_or_FOS__c</fullName>
    <label>Conventional or FOS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Conventional</fullName>
            </value>
            <value>
                <fullName>FOS</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>