fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/Date_Acquired__c.field-meta.xml
<CustomField>
    <fullName>Date_Acquired__c</fullName>
    <label>Date Service Aggrement Expires</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20-Mar</fullName>
            </value>
            <value>
                <fullName>20-Apr</fullName>
            </value>
            <value>
                <fullName>20-May</fullName>
            </value>
            <value>
                <fullName>20-Jun</fullName>
            </value>
            <value>
                <fullName>20-Jul</fullName>
            </value>
            <value>
                <fullName>20-Aug</fullName>
            </value>
            <value>
                <fullName>20-Sep</fullName>
            </value>
            <value>
                <fullName>20-Oct</fullName>
            </value>
            <value>
                <fullName>20-Nov</fullName>
            </value>
            <value>
                <fullName>20-Dec</fullName>
            </value>
            <value>
                <fullName>21-Jan</fullName>
            </value>
            <value>
                <fullName>21-Feb</fullName>
            </value>
            <value>
                <fullName>21-Mar</fullName>
            </value>
            <value>
                <fullName>21-Apr</fullName>
            </value>
            <value>
                <fullName>21-May</fullName>
            </value>
            <value>
                <fullName>21-Jun</fullName>
            </value>
            <value>
                <fullName>21-Jul</fullName>
            </value>
            <value>
                <fullName>21-Aug</fullName>
            </value>
            <value>
                <fullName>21-Sep</fullName>
            </value>
            <value>
                <fullName>21-Oct</fullName>
            </value>
            <value>
                <fullName>21-Nov</fullName>
            </value>
            <value>
                <fullName>21-Dec</fullName>
            </value>
            <value>
                <fullName>22-Jan</fullName>
            </value>
            <value>
                <fullName>22-Feb</fullName>
            </value>
            <value>
                <fullName>22-Mar</fullName>
            </value>
            <value>
                <fullName>22-Apr</fullName>
            </value>
            <value>
                <fullName>22-May</fullName>
            </value>
            <value>
                <fullName>22-Jun</fullName>
            </value>
            <value>
                <fullName>22-Jul</fullName>
            </value>
            <value>
                <fullName>22-Aug</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>