fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/Date_Acquired_Pump__c.field-meta.xml
<CustomField>
    <fullName>Date_Acquired_Pump__c</fullName>
    <label>Date Acquired</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1/1/2000</fullName>
            </value>
            <value>
                <fullName>1/1/2001</fullName>
            </value>
            <value>
                <fullName>1/1/2002</fullName>
            </value>
            <value>
                <fullName>1/1/2003</fullName>
            </value>
            <value>
                <fullName>1/1/2004</fullName>
            </value>
            <value>
                <fullName>1/1/2005</fullName>
            </value>
            <value>
                <fullName>1/1/2006</fullName>
            </value>
            <value>
                <fullName>1/1/2007</fullName>
            </value>
            <value>
                <fullName>1/1/2008</fullName>
            </value>
            <value>
                <fullName>1/1/2009</fullName>
            </value>
            <value>
                <fullName>1/1/2010</fullName>
            </value>
            <value>
                <fullName>1/1/2011</fullName>
            </value>
            <value>
                <fullName>1/1/2012</fullName>
            </value>
            <value>
                <fullName>1/1/2013</fullName>
            </value>
            <value>
                <fullName>1/1/2014</fullName>
            </value>
            <value>
                <fullName>1/1/2015</fullName>
            </value>
            <value>
                <fullName>1/1/2016</fullName>
            </value>
            <value>
                <fullName>1/1/2017</fullName>
            </value>
            <value>
                <fullName>1/1/2018</fullName>
            </value>
            <value>
                <fullName>1/1/2019</fullName>
            </value>
            <value>
                <fullName>1/1/2020</fullName>
            </value>
            <value>
                <fullName>1/1/2021</fullName>
            </value>
            <value>
                <fullName>1/1/2022</fullName>
            </value>
            <value>
                <fullName>1/1/2023</fullName>
            </value>
            <value>
                <fullName>1/1/2024</fullName>
            </value>
            <value>
                <fullName>1/1/2025</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>