fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/Date_Acquired_T__c.field-meta.xml
<CustomField>
    <fullName>Date_Acquired_T__c</fullName>
    <label>Date Acquired</label>
    <length>16</length>
    <type>Text</type>
</CustomField>