fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/GIDept__c.field-meta.xml
<CustomField>
    <fullName>GIDept__c</fullName>
    <formula>Decision_Maker__r.Department</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department</label>
    <type>Text</type>
</CustomField>