fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/GIPhone__c.field-meta.xml
<CustomField>
    <fullName>GIPhone__c</fullName>
    <formula>Decision_Maker__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Phone</label>
    <type>Text</type>
</CustomField>