fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/GITitle__c.field-meta.xml
<CustomField>
    <fullName>GITitle__c</fullName>
    <formula>Decision_Maker__r.Title</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title</label>
    <type>Text</type>
</CustomField>