fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/Hospital_Transports_Out_Picks_Up_Pump_P__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Transports_Out_Picks_Up_Pump_P__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hospital Transports  Out/Picks Up Pump P</label>
    <type>Checkbox</type>
</CustomField>