fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/Next_Step_from_Sales_Rep_Include_Date_Ca__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_from_Sales_Rep_Include_Date_Ca__c</fullName>
    <label>Next Step from Sales Rep - Include Date</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>