fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/Pump_Model__c.field-meta.xml
<CustomField>
    <fullName>Pump_Model__c</fullName>
    <label>Pump Model</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AC2</fullName>
            </value>
            <value>
                <fullName>AC3</fullName>
            </value>
            <value>
                <fullName>AC2W/AC3</fullName>
            </value>
            <value>
                <fullName>CardioSave</fullName>
            </value>
            <value>
                <fullName>CS300</fullName>
            </value>
            <value>
                <fullName>CS300CS</fullName>
            </value>
            <value>
                <fullName>CS100</fullName>
            </value>
            <value>
                <fullName>AC2W</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>