fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/Qualified_Demo_Performed1__c.field-meta.xml
<CustomField>
    <fullName>Qualified_Demo_Performed1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qualified Demo Performed?</label>
    <type>Checkbox</type>
</CustomField>