fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/Reference_Account__c.field-meta.xml
<CustomField>
    <fullName>Reference_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reference Account</label>
    <type>Checkbox</type>
</CustomField>