fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/Rep__c.field-meta.xml
<CustomField>
    <fullName>Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Capital_Account_Profiles1</relationshipName>
    <type>Lookup</type>
</CustomField>