fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/Sales_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Sales_Cycle__c</fullName>
    <label>Sales Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0%=Lost Opp</fullName>
            </value>
            <value>
                <fullName>20%=Hosp submitted to current budget</fullName>
            </value>
            <value>
                <fullName>40%=Sales demo of AC3 and/or quote provided</fullName>
            </value>
            <value>
                <fullName>60%=Hosp communicates TFX is vendor of choice</fullName>
            </value>
            <value>
                <fullName>80%=Approved in current budget</fullName>
            </value>
            <value>
                <fullName>95%=P.O. in process</fullName>
            </value>
            <value>
                <fullName>100%=P.O. Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>