fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/Select_Cycle_Catheter__c.field-meta.xml
<CustomField>
    <fullName>Select_Cycle_Catheter__c</fullName>
    <label>Select Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0%=Not currently interested in converting</fullName>
            </value>
            <value>
                <fullName>25%=Expressed interest in converting</fullName>
            </value>
            <value>
                <fullName>40%=Catheter demo</fullName>
            </value>
            <value>
                <fullName>60%=Catheter Eval</fullName>
            </value>
            <value>
                <fullName>75%=Verbal confirmation they will go with TFX</fullName>
            </value>
            <value>
                <fullName>95%=Conversion in progress</fullName>
            </value>
            <value>
                <fullName>100%=Purchasing product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>