fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/Service_Plan_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Plan_Type__c</fullName>
    <label>Service Plan Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TFX Pinnacle</fullName>
            </value>
            <value>
                <fullName>TFX Partner</fullName>
            </value>
            <value>
                <fullName>TFX Preferred</fullName>
            </value>
            <value>
                <fullName>Maquet Gold</fullName>
            </value>
            <value>
                <fullName>Maquet Silver</fullName>
            </value>
            <value>
                <fullName>Maquet Bronze</fullName>
            </value>
            <value>
                <fullName>Biomed Ext Warr</fullName>
            </value>
            <value>
                <fullName>Complete Ext Warr</fullName>
            </value>
            <value>
                <fullName>On Demand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>