fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/Status_Include_Date_mm_day_yr_cathe__c.field-meta.xml
<CustomField>
    <fullName>Status_Include_Date_mm_day_yr_cathe__c</fullName>
    <label>Status - Include Date - mm/day/yr</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>