fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/Total_Catheter_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Total_Catheter_Opportunity__c</fullName>
    <formula>Annual_Usage__c * 	Catheter_ASP__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Catheter Opportunity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>