fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/Total_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Total_Opportunity__c</fullName>
    <formula>Number_of_Pumps_As_Current_Opportunity__c	 * ASP_Per_Pump__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Opportunity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>