fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/Type_of_Current_Aggrement__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Current_Aggrement__c</fullName>
    <label>Type of Current Aggrement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manufacturer</fullName>
            </value>
            <value>
                <fullName>In-House Trained</fullName>
            </value>
            <value>
                <fullName>3rd Party Trained</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>