fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/X2019_Completed_Date_and_Initials__c.field-meta.xml
<CustomField>
    <fullName>X2019_Completed_Date_and_Initials__c</fullName>
    <label>2019 Completed Date and Initials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>