fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/X2019_PostClass_Report_Sent__c.field-meta.xml
<CustomField>
    <fullName>X2019_PostClass_Report_Sent__c</fullName>
    <label>2019 PostClass Report Sent?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>