fullSandbox11072023/force-app/main/default/objects/Capital_Account_Profiles__c/fields/X2019_Pre_Class_Letter__c.field-meta.xml
<CustomField>
    <fullName>X2019_Pre_Class_Letter__c</fullName>
    <label>2019 Pre Class Letter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>